--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   </table>
 <br>
 <br>
-  <a href="https://github.com/your-username/your-repository">GitHub Repository</a>
+  <a href="https://github.com/anilkrishnan2255/anilkrishnan2255.github.io">GitHub Repository</a>
 </body>
 </html>
