--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Welcome to My Webpage</h1>
   
-  <img src="1007550.jpg" alt="Image">
+  <img src="1007550.jpg" alt="Image" width="500" height="300">
 
 <h3> Main Characters </h3>
   <ul>
